Fix grid spacing

--- a/src/app/App.css
+++ b/src/app/App.css
@@ -1,11 +1,10 @@
 .App {
     height: 100%;
     display: grid;
-    grid-template-columns: 9fr 1fr;
+    grid-template-columns: 88% auto;
     grid-template-rows: 60% 40%;
     column-gap: 2rem;
     row-gap: 2rem;
-    padding: 1rem;
     justify-items: center;
     align-items: center;
     font-family: 'Barlow', sans-serif;
